# public_attachments

./: .gitattributes  .gitignore  git_lfs_track.sh
books/: C++20 模板concept.md
books2/: 11082-毛泽东选集.epub
cmake_use_boost/: CMakeLists.txt
draft/cpp/: CMakeLists.txt  README.md  br_one.sh  build.sh  build_one.sh  env_variable.sh  run.sh  run_one.sh
draft/cpp/cpp_weekly_from_youtube/: CMakeLists.txt  std_array_ep_259.cc  std_ignore_ep_490.cc
draft/cpp/define_template_in_cpp_file/: CMakeLists.txt  README.md  main.cc  test_temp_1.cpp  test_temp_1.h  test_temp_2.cpp  test_temp_2.h  test_temp_3.cpp  test_temp_3.h  test_temp_4.cpp  test_temp_4.h
draft/cpp/get_outer/: main.cc
draft/cpp/learning_grammar/: CMakeLists.txt  any_one_with_lambda.cc
draft/cpp/learning_grammar/concept/: main.cc
draft/cpp/learning_grammar/cpp23_modules/: CMakeLists.txt  README.md  build.sh  hello_world.cppm  main.cc
draft/cpp/learning_grammar/cpp23_modules/core/: base.cppm  core.ixx  utils.cppm
draft/cpp/learning_grammar/cpp23_modules/data/: data.ixx  user.cppm
draft/cpp/learning_grammar/cpp23_modules/gcm.cache/: core-base.gcm  core-utils.gcm  core.gcm  data-user.gcm  data.gcm  hello_world.gcm  net-client.gcm  net.gcm
draft/cpp/learning_grammar/cpp23_modules/net/: client.cppm  net.ixx
draft/cpp/learning_grammar/generator/: main.cc
draft/cpp/learning_grammar/is_all_true/: is_all_true_insight.cc  is_all_true_source.cc  main.cc
draft/cpp/learning_grammar/three_way_comparation/: main.cc
draft/cpp/practice_template_metaprogramming/: main.cc  stdout.txt
draft/cpp/std_conditional/: main.cc
draft/cpp/stdout/: is_all_true.txt  stmp.txt
draft/cpp/stdout/cpp_weekly_from_youtube/: std_array_ep_259.txt
draft/cpp/stdout/define_template_in_cpp_file/: dticf.txt
draft/cpp/stdout/learning_grammar/: concept.txt  generator.txt  is_all_true.txt  three_way_comparation.txt
draft/cpp/stmp/: CMakeLists.txt  main.cc
翻译RecursiveMacrosWithC++20__VA_OPT__/: README.md  recursive_macro.cc  run.sh  test.cc  va_opt.cc  va_opt.stdout  va_opt_main.cc  va_opt_main.stdout  翻译.md
翻译RecursiveMacrosWithC++20__VA_OPT__/process_macro/: context.h  main.cc  process_macro.cpp  process_macro.h  run.sh  user_api.cpp  utils.cpp
